--- a/templates/session.html
+++ b/templates/session.html
@@ -256,7 +256,7 @@
       {% endblock %}
       <div id="msg_entry">
         <form action="" method="POST">
-          <input type="text" class="message" placeholder="Type to chat" height='44'/>
+          <input type="text" class="message" placeholder="Type to chat" height='44' size='15'/>
           <input type="submit" class='button btn btn-secondary' value='Send'/>
         </form>
       </div>
@@ -265,10 +265,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
     <script src="/static/session.js"></script>
+    <script src="/static/socket_io.js"></script>
     <script>
       // set initial variables
       window.phase = "{{ session.get('phase') }}"
       window.own_team = "{{ session.get('color') }}";
+      var session_id = "{{ session.get('session_id') }}";
+      var user_id = '{{ session.get("user_id") }}';
 
       // show phase when page loads
       showPhase(window.phase);
@@ -289,112 +292,28 @@
         show_victory_screen(window.phase.split('_')[0], '{{ url_for("auth.logout") }}');
       }
 
+      // create socket.io connection
       var socket = io.connect('http://' + document.domain + ':' + location.port);
-      var session_id = "{{ session.get('session_id') }}";
 
+      // listen for initial connection
       socket.on( 'connect', function() {
-        socket.emit( 'my event', {
-          data: 'User Connected'
-        } );
-
-      console.log('Creating game...');
-      socket.emit('create', {
-        data: '{{ g.session_id }}'
-      });
-
-      // message handler for the 'join_room' channel
-      socket.on('join_room', function(msg) {
-          console.log(msg);
-      });
-
-      var form = $( 'form' ).on( 'submit', function( e ) {
-        e.preventDefault()
-        let user_name = '{{ session.get("user_id") }}'
-        let user_input = $( 'input.message' ).val()
-        socket.emit( 'chat message', {
-          user_name : user_name,
-          message : user_input
-        } )
-        $( 'input.message' ).val( '' ).focus()
-      } )
+        connect_socket(session_id, user_id);
       } )
 
-
+      // listen for all-purpose messages, including chats & board state changes
       socket.on( 'my response', function( msg ) {
-        // check if response is chat message
-        if ( typeof msg.user_name !== 'undefined' ) {
-          $( 'div#msg_holder' ).append( '<div class="msg"><b style="color: #000">'+msg.user_name+'</b> '+msg.message+'</div>' );
-          scroll_chat("x");
-        // otherwise handle as board state
-        } else {
-            // actions for both players when a board state is sent from back end
-            if ( msg.game_over === true) { 
-              modifyGrid('grid',modification='removeListeners');
-                show_victory_screen(msg.responsible_team);
-            } else {
-            window.phase = msg['phase'];
-            showPhase(window.phase);
-            if ((window.phase != 'preparation') & (document.getElementById('chest').classList.contains('hidden') === false)) {
-              toggle_element(document.getElementById('chest'));
-            }
-            }
-            // handling of board states received by backend for opposing moves only
-            // modifies front end based on change
-            console.log(msg);
-            if ( window.own_team !== msg['responsible_team'] ) {
-              var origin_row = msg['origin_cell'][0];
-              var origin_col = msg['origin_cell'][1];
-              var destination_row = msg['destination_cell'][0];
-              var destination_col = msg['destination_cell'][1];
-              var team = msg['moved_piece']['color'];
-
-              if ( team == window.own_team) {
-                var payload = msg['moved_piece']['piece'];
-              } else {
-                var payload = "";
-              }
-
-              var offboard_origin = msg['origin_cell'].includes("");
-              if ( offboard_origin  === false) {
-                extractData(document.getElementById(origin_row).querySelector('#' + CSS.escape(origin_col)).querySelector('.square').querySelector('.content'));
-              }
-
-              loadData(document.getElementById(destination_row).querySelector('#' + CSS.escape(destination_col)).querySelector('.square').querySelector('.content'),payload=payload,
-                team=team,sync_board=true);
-              socket.emit( 'opposing board sync' );
-            }
-        }
+        handle_incoming_data(msg);
       })
-
+      // listen for clicked pieces to return valid move ranges
       socket.on( 'return range', function( msg ) {
-        console.log(msg['phase']);
-        if (window.phase === window.own_team) {
-          modifyGrid('grid',modification='highlightSquares',movementRange=msg);
-        }
+        return_range(msg);
       })
-
+      // listen for combat results, handle msg if you initiated that combat
       socket.on( 'own combat result', function( msg ) {
-        if (window.phase === window.own_team) {
-          var destination_row = msg['destination_cell'][0];
-          var destination_col = msg['destination_cell'][1];
-          console.log( 'hiiii' );
-          console.log( msg )
-          var winning_team = msg['moved_piece']['color'];
-          console.log(winning_team);
-          if (winning_team === window.own_team) {
-            var payload = msg['moved_piece']['piece'];
-          } else {
-            var payload = "";
-          }
-
-
-          loadData(document.getElementById(destination_row).querySelector('#' + CSS.escape(destination_col)).querySelector('.square').querySelector('.content'),
-            payload=payload,team=winning_team,sync_board=true);
-        }
+        handle_own_combat_result(msg);
       })
-      
     </script>
-        <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
