--- a/templates/session.html
+++ b/templates/session.html
@@ -7,161 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
-    <style>
-      body {
-        background-color:white;
-        font-family: 'dosis';
-      }
-      table, th, td {
-        border: 0.5px solid #4b4949;
-        border-collapse: collapse;
-        color: #585454;
-        text-align: center;
-      }
-      .click a {
-        display: block;
-      }
-      table {
-        width: 90%;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      }
-      .blue {
-        background-color:#2888DB;
-      }
-      .red {
-        background-color: #DB443D;
-      }
-      .water {
-        background-color: #1DDBCF;
-        opacity: 0.5;
-      }
-      .empty {
-        background-color: rgb(212, 211, 211);
-        opacity: 0.5
-      }
-      .out_of_range {
-        filter: brightness(60%);
-      }
-      .selected {
-        transition: opacity .25s ease-in-out;
-        -moz-transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out;
-        opacity: 0.5;
-      }
-      td {
-        width: 9.1%;
-        position: relative;
-        padding-bottom: 6px;
-      }
-      td:after {
-        content: '';
-        display: block;
-        margin-top: 100%;
-      }
-      .square {
-        display: table;
-      }
-      .content {
-        font-size:7vw;
-        color:white;
-        text-align:center;
-        vertical-align: center;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-      .row-header {
-        font-size:5vw;
-        color:#585454;
-        text-align:center;
-        vertical-align: bottom;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-      .popup {
-        position: fixed; /* Sit on top of the page content */
-        display: block; 
-        width: 100%; /* Full width (cover the whole page) */
-        height: 100%; /* Full height (cover the whole page) */
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0,0,0,0.75); /* Black background with opacity */
-        z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-        cursor: pointer;
-      }
-      .popup_text{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      font-size: 50px;
-      color: white;
-      transform: translate(-50%,-50%);
-      -ms-transform: translate(-50%,-50%);
-      border-radius: 15px;
-      }
-      .popup_link {
-        color:white;
-      }
-      .navbar {
-        background-color: #6c757d;
-        color:whitesmoke;
-        margin-bottom: 5px;
-        z-index: 200;
-      }
-      .bold {
-        font-weight: bolder;
-        color:whitesmoke;
-      }
-      .fullscreen{
-        display: flex;
-        flex-direction: column-reverse;
-        z-index: 100; 
-        width: 100%; 
-        max-height: 100%; 
-        position: fixed; 
-        top: 0; 
-        left: 0; 
-      }
-      .hidden {
-        display: none;
-      }
-      .svg_button {
-        border:none;
-        background-color: transparent;
-      }
-      #chat {
-        margin-top: 58px;
-        background-color: rgb(223, 223, 223);
-        padding: 5px;
-      }
-      #msg_holder {
-        height: calc(100vh - 122px); /* space for fixed navbar (48px), "main" title (71px), footer (53px) */
-        overflow-y: scroll;
-        overscroll-behavior-y: contain;
-        scroll-snap-type: y proximity;
-      }
-      #msg_holder > div:last-child {
-        scroll-snap-align: end;
-      }      
-      #msg_entry {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        padding: 15px;
-        background-color: rgb(223, 223, 223);
-        width: 100%;
-      }
-      input[type=text] {
-        height: 38px;
-      }
-  </style>
+    <link rel="stylesheet" href="/static/session.css">
     <title>Flask_Chat_App</title>
   </head>
   <body>
