put chat icon in dropdown for mobile style. added close button to chat window.

--- a/static/session.css
+++ b/static/session.css
@@ -148,6 +148,7 @@ body {
     background-color: rgb(223, 223, 223);
     width: 100%;
   }
+  #close_chat
   input[type=text] {
     height: 38px;
   }
